<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/brick">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/company_name"
                android:textAllCaps="true"
                android:textColor="#F44336"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16sp"
                android:text="@string/tagline"
                android:textColor="#D32F2F"
                android:textStyle="bold|italic" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/vineetblack" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/owner_name"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/description"
                android:textColor="#00BCD4"
                android:textSize="16sp"
                android:textStyle="italic" />


        </LinearLayout>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/email"
            android:src="@drawable/email" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:autoLink="email"
            android:text="@string/email"
            android:textSize="16sp" />

        <ImageView

            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_above="@id/email"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/number"
            android:src="@drawable/phone" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/email"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:autoLink="phone"
            android:text="@string/number"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/home" />


        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="40dp"
            android:autoLink="map"
            android:text="@string/address"
            android:textSize="16sp" />

    </RelativeLayout>


</ScrollView>